sfdx-source/fflib-working-examples/main/schema/objects/Domain_Config__mdt/Domain_Config__mdt.object-meta.xml
<CustomObject>
    <description>This MDT holds configuration setting information about a SObject&apos;s Domain Class and what settings are enabled or disabled</description>
    <label>Domain Config</label>
    <pluralLabel>Domain Config</pluralLabel>
</CustomObject>