sfdx-source/fflib-working-examples/main/schema/objects/Domain_Config__mdt/fields/Bypass_Error_Handling__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Error_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Enabled, Error Handling will be disabled for the Domain</description>
    <inlineHelpText>If Enabled, Error Handling will be disabled for the Domain</inlineHelpText>
    <label>Bypass Error Handling</label>
    <type>Checkbox</type>
</CustomField>