sfdx-source/fflib-working-examples/main/schema/objects/Domain_Config__mdt/fields/Bypass_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Enabled, the trigger will be disabled for the Domain</description>
    <inlineHelpText>If Enabled, the trigger will be disabled for the Domain</inlineHelpText>
    <label>Bypass Trigger</label>
    <type>Checkbox</type>
</CustomField>