sfdx-source/fflib-working-examples/main/schema/objects/Domain_Config__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Name of the Domain Class for the SObject</description>
    <inlineHelpText>Name of the Domain Class for the SObject</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>