sfdx-source/fflib-working-examples/main/schema/objects/Domain_Config__mdt/fields/Prevent_Recursion__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Recursion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Enabled, the triggers for the Domain will only be fired once</description>
    <inlineHelpText>If Enabled, the triggers for the Domain will only be fired once</inlineHelpText>
    <label>Prevent Recursion</label>
    <type>Checkbox</type>
</CustomField>